small issue Word wrap, font size fixes

--- a/src/components/Insight/styles.module.css
+++ b/src/components/Insight/styles.module.css
@@ -163,7 +163,7 @@
     margin-top: 10%;
   }
   .pieInfo .pieInfoList {
-    font-size: 1.5rem !important;
+    font-size: 17px !important;
     text-overflow: ellipsis;
     overflow-y: auto;
     word-break: break-word;
